--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/Blackground.png
+    - assets/images/8mountain.jpg
+    - assets/images/dune1.jpeg
+    - assets/images/ready.jpg
+    - assets/images/redboat.jpg
+    - assets/images/redhood.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
