--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
     - assets/images/ready.jpg
     - assets/images/redboat.jpg
     - assets/images/redhood.jpg
+    - assets/images/1.jpg
+    - assets/images/2.jpg
+    - assets/images/4.jpg
+    - assets/images/aaaa.webp
+    - assets/images/qqq.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
