--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  #   - assets/images/Picture/1.jpg
-  #   - assets/images/Picture/ready.jpg
-  #   - assets/images/Picture/redhood.jpg
+  - assets/images/Picture/1.jpg
+  - assets/images/Picture/ready.jpg
+  - assets/images/Picture/redhood.jpg
 
  
